# crab-code

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  clippy.toml  deny.toml  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: adaptive_prompt.rs  assignment.rs  auto_dream.rs  code_gen.rs  code_nav.rs  code_review.rs  conversation_tree.rs  coordinator.rs  dialogue.rs  error_recovery.rs  health.rs  lib.rs  memory_retriever.rs  message_bus.rs  message_router.rs  metrics.rs  project_context.rs  prompt_optimizer.rs  prompt_template.rs  query_loop.rs  repl_commands.rs  smart_context.rs  snippet_store.rs  summarizer.rs  system_prompt.rs  task.rs  team.rs  tool_analytics.rs  tool_patterns.rs  tool_pipeline.rs  tool_recommender.rs  work_stealing.rs  worker.rs
crates/agent/tests/: integration_m7b.rs
crates/api/src/: capabilities.rs  context_optimizer.rs  fast_mode.rs  lib.rs  output_format.rs  token_estimation.rs  token_limiter.rs  (+3 more)
crates/auth/: Cargo.toml
crates/auth/src/: audit.rs  aws_iam.rs  bedrock_auth.rs  credential_chain.rs  gcp_identity.rs  key_derive.rs  lib.rs  oauth.rs  rotation.rs  vertex_auth.rs
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/daemon/: Cargo.toml
crates/fs/: Cargo.toml
crates/mcp/: Cargo.toml
crates/plugin/: Cargo.toml
crates/process/: Cargo.toml
crates/session/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: Cargo.toml
docs/: architecture.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+178 files in other folders)
